# Scribe-Data

./: .dockerignore  .env  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  .readthedocs.yaml  Brewfile  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  USAGE.md  complexipy-snapshot.json  environment.yml  fix_translations.py  package.json  pyproject.toml  query_check_sparql_service_features.json  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  user_file.txt
.github/: COC_CONTACT.md  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_wikidata.yml  documentation.yml  documentation_enhancement.yml  feature_request.yml  new_keyboard.yml  question.yml
.github/docs/: CONTRIBUTING_NO_BACK_LINKS.md  CONTRIBUTING_NO_BACK_LINKS.rst
.github/workflows/: .markdown-link-check.json  check_and_update_cldr_emoji_data.yaml  check_and_update_missing_query_forms.yaml  check_project_metadata.yaml  check_project_structure.yaml  check_query_forms.yaml  check_query_identifiers.yaml  ci_license_header_check.yaml  ci_pytest.yaml  ci_python_package.yaml  ci_spdx_license_header_check.yaml  ci_static_analysis.yaml  docker-image.yaml  docs_broken_linkcheck.yaml  docs_link_check.yaml  link-check.yml  markdown_files_link_check.yaml  missing_form_check&update.yaml  missing_form_check_update.yaml  pr_ci.yaml  pr_maintainer_checklist.yaml  publish_docker_image.yaml  python_package_ci.yaml  update_emojis.yaml
Data/Japanese/nouns/: queryNouns.sparql
Linkchecks/: linkcheck.py
Resources/: CC0_mockups_logo.sketch
Sketch/Apple/iPad/: iPadPro2ndGen.sketch  iPadPro4thGen.sketch
Sketch/Apple/iPhone/: iPhone13.sketch  iPhone8.sketch
data/: data_utils.py  update_data.py
data/French/nouns/: format_nouns.py
data/French/translations/: format_translations.py
data/French/verbs/: format_verbs.py
data/German/nouns/: format_nouns.py
data/German/prepositions/: format_prepositions.py
data/German/verbs/: format_verbs.py
data/Italian/nouns/: format_nouns.py
data/Italian/verbs/: format_verbs.py
data/Japanese/verbs/: query_verbs.sparql
data/Portuguese/nouns/: format_nouns.py
data/Portuguese/translations/: format_translations.py
data/Portuguese/verbs/: format_verbs.py
data/Russian/nouns/: format_nouns.py
data/Russian/prepositions/: format_prepositions.py
data/Russian/translations/: format_translations.py
data/Russian/verbs/: format_verbs.py
data/Spanish/nouns/: format_nouns.py
data/Spanish/verbs/: format_verbs.py
data/Swedish/nouns/: format_nouns.py
data/Swedish/translations/: format_translations.py
data/Swedish/verbs/: format_verbs.py
docs/: requirements.txt
docs/source/: cli.rst  conf.py  index.rst  notes.rst  utils.rst
language_data_export/English/: nouns.json
language_data_export/French/: nouns.json  verbs.json
language_data_export/German/: prepositions.json  verbs.json
language_data_export/Italian/: emoji_keywords.json  nouns.json
language_data_export/Portuguese/: nouns.json  verbs.json
language_data_export/Spanish/: emoji_keywords.json  nouns.json  translations.json  verbs.json
scribe_data_contracts/: it.json  ru.json
scribe_data_export/English/: verbs.json
scribe_data_export/French/: emoji_keywords.json  nouns.json  verbs.json
scribe_data_export/German/: autosuggestions.json  prepositions.json
scribe_data_export/Italian/: autosuggestions.json  verbs.json
scribe_data_export/Portuguese/: verbs.json
scribe_data_export/Russian/: prepositions.json  verbs.json
scribe_data_export/Spanish/: nouns.json  verbs.json
scribe_data_export/Swedish/: autosuggestions.json  nouns.json  verbs.json
scribe_data_json_export/Basque/: Verbs.json
scribe_data_json_export/English/: emoji_keywords.json  nouns.json  translations.json
scribe_data_json_export/French/: autosuggestions.json  emoji_keywords.json  nouns.json  translations.json  verbs.json
scribe_data_json_export/German/: emoji_keywords.json  translations.json  verbs.json
scribe_data_json_export/Hindi/: Nouns.json  verbs.json
scribe_data_json_export/Italian/: emoji_keywords.json  nouns.json  translations.json  verbs.json
scribe_data_json_export/Latin/: Nouns.json  Verbs.json
scribe_data_json_export/Malayalam/: emoji_keywords.json
scribe_data_json_export/Portuguese/: autosuggestions.json  emoji_keywords.json  nouns.json  translations.json  verbs.json
scribe_data_json_export/Russian/: autosuggestions.json  emoji_keywords.json  prepositions.json  translated_words.json  translations.json  verbs.json
scribe_data_json_export/Spanish/: autosuggestions.json  emoji_keywords.json  nouns.json  translations.json  verbs.json
scribe_data_json_export/Swedish/: emoji_keywords.json  nouns.json  translations.json  verbs.json
src/scribe_data/: __init__.py  check_language_data.sparql  checkquery.py  cli.py  emoji_lexicon.py  total_noun.py  upgrade.py  utils.py
test-upgrade-minimal/tests/: test_upgrade.py
tests/: conftest.py  test_core_utils.py  test_setup.py  test_utils.py
tests/check/: test_check_project_metadata.py
tests/cli/: test_cli_get.py  test_cli_upgrade.py  test_cli_utils.py  test_cli_version.py  test_convert.py  test_convert_and_format_regressions.py  test_download.py  test_dump.py  test_get.py  test_interactive.py  test_list.py  test_total.py  test_upgrade.py  test_utils.py  test_version.py  version.py
tests/load/: test_checkquery.py  test_data_to_sqlite.py  test_send_dbs_to_scribe.py  test_update_utils.py
tests/resources/: test_metadata.py  test_resources_metadata.py
tests/unicode/: test_generate_emoji_keywords.py  test_unicode_generate_emoji_keywords.py
tests/wikidata/: test_check_query.py  test_checkquery.py  test_process_unicode.py  test_query_data.py  test_sparql.py  test_wikidata_check_query.py  test_wikidata_dump.py  test_wikidata_query_data.py
tests/wikipedia/: test_extract_wiki.py  test_generate_autosuggestions.py
tests/wiktionary/: test_parse_mediaWiki.py  test_parse_translations.py  test_wiktionary_parse_translations.py
(+3515 files in other folders)
