[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scribe-data"
version = "5.1.4"
description = "Wikidata and Wiktionary language data extraction"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["wikidata", "lexemes", "cli", "data", "etl", "elt"]
authors = [{ name = "Andrew Tavis McAllister", email = "team@scri.be" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

dependencies = [
    "emoji==2.15.0",
    "orjson==3.11.8",
    "packaging==26.0",
    "pyyaml==6.0.3",
    "questionary==2.1.1",
    "requests==2.33.1",
    "rich==14.3.3",
    "sparqlwrapper==2.0.0",
    "tqdm==4.67.3",
]

[project.optional-dependencies]
dev = [
    "prek>=0.3.8",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "setuptools>=82.0.1",
    "ty>=0.0.29",
]
docs = [
    # Keep docs dependencies formatted in this way with ruff to allow for upgrades via VS Code extension.
    "m2r2>=0.3.4",
    "numpydoc>=1.10.0",
    "sphinx-rtd-theme>=3.1.0",
]

[project.scripts]
scribe-data = "scribe_data.cli.main:main"

[project.urls]
Homepage = "https://github.com/scribe-org/Scribe-Data"

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE.txt"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scribe_data.unicode" = ["2021_ranked.tsv"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "*/tests.py",
    "*/migrations/*.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "venv",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
]

ignore = [
    "E501", # line too long, handled by black
]

fixable = ["I"]
unfixable = []

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds the following value.
max-complexity = 10

[tool.isort]
line_length = 88

[tool.coverage.run]
omit = ["*/tests/*", "*/__init__.py"]

[tool.ty]
[tool.ty.src]
include = ["src"]

[tool.ty.rules]
unresolved-import = "warn"
invalid-return-type = "warn"
invalid-argument-type = "warn"
invalid-assignment = "warn"
unsupported-operator = "warn"
unresolved-attribute = "warn"
missing-argument = "warn"
unknown-argument = "warn"
not-subscriptable = "warn"
possibly-missing-submodule = "warn"

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "ES01",
    "EX01",
    "SA01",
]
